WebCore/dom/UIEventWithKeyState.h
@@ -63,6 +63,8 @@ namespace WebCore {
         bool m_metaKey : 1;
     };
 
+    UIEventWithKeyState* findEventWithKeyState(Event*);
+
 } // namespace WebCore
 
 #endif // UIEventWithKeyState_h
